client-gen/src/snapshots/sails_clientgen__generator__tests__nested_enum.snap
---
source: client-gen/src/generator.rs
expression: generator.generate(program).unwrap()
---
// Code generated by sails-client-gen from test. DO NOT EDIT.
#![automatically_derived]
#![allow(unused)]
use parity_scale_codec::{Encode, Decode};
use sails_sender::Call;
use gstd::prelude::*;
#[derive(PartialEq, Debug, Encode, Decode)]
pub enum TwoVariant  {
Three,
Four,
} 
#[derive(PartialEq, Debug, Encode, Decode)]
pub enum ThisThatAppManyVariants  {
One,
Two(TwoVariant),
} 

                pub trait Service {
            
}


    #[derive(Default, Clone)]
    pub struct Client {
        program_id: [u8; 32],
    }

    impl Client {
        pub fn new() -> Self {
            Self::default()
        }
    }


    impl Service for Client {

    
}

